[tool.poetry]
name = "osmium-chat"
version = "0.3.0"
description = "A Python API wrapper for Osmium."
readme = "README.md"
license = "MIT"
authors = ["abigail phoebe <abigail@phoebe.sh>"]
packages = [{ include = "osmium_chat" }]

[tool.poetry.urls]
Homepage = "https://github.com/ijsbol/osmium-chat"
"Bug Tracker" = "https://github.com/ijsbol/osmium-chat/issues"

[tool.poetry.dependencies]
python = ">=3.13,<4.0"
osmium-protos = ">=2.0.0"
websockets = ">=16.0"

[tool.poetry.group.dev.dependencies]
isort = ">=8.0.1"
ruff = ">=0.15.15"
twine = ">=6.2.0,<7.0.0"
build = ">=1.4.0,<2.0.0"
flake8 = ">=7.3.0,<8.0.0"
pytest = "^9.0.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
select = ["COM812"]

[tool.ruff.format]
skip-magic-trailing-comma = false
